Thu Sep 28 03:34:52 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c, gnome-moz-remote2.c, gnome-util.c, gnomelib-init2.c:
	  use g_getenv instead of getenv

Sun Sep 24 15:32:20 2000  George Lebl <jirka@5z.com>

	* gnome-exec.[ch]:  Improve some docs, and add function to
	  deal with terminals according to user prefs.  Also some stylistic
	  changes.

	* gnome-ditem.c:  Use the gnome-exec function for getting the
	  terminal command line

	* gnome-portability.h.in:  remove the alloca thing as g_alloca is
	  apparently now in glib.  The file is now empty and perhaps
	  should be removed, unless there's further need for it.

Sat Sep 23 17:28:25 2000  George Lebl <jirka@5z.com>

	* gnome-i18n.[ch]:  Add gnome_i18n_push_c_numeric_locale and
	  gnome_i18n_pop_c_numeric_locale functions that do the job of
	  pushing and poping "C" locale to make float<->string conversions
	  work right in other locales.

	* gnome-scores.c, gnome-config.c: use the above

	* gnome-ditem.c: include gnome-url.h to avoid warning

Fri Sep 15 18:47:06 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.[ch]: Launch Type=URL entries, and slight
	  cosmetic updates

Thu Sep 14 18:45:00 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: use g_path_get_dirname instead of g_dirname

2000-09-09  Martin Baulig  <baulig@suse.de>

	* gnome-util.c (g_copy_vector): Allow the argument to be NULL.

Fri Sep 01 19:13:15 2000  George Lebl <jirka@5z.com>

	* gnome-url.[ch]: Use GError instead of homebrewed error return

2000-08-31  Martin Baulig  <baulig@suse.de>

	* gnome-i18n.c (gnome_i18n_get_language_list): Mark this as
	deprecated and call g_i18n_get_language_list().  Moved most
	stuff from this file into glib; you need the glib-2.0.patch
	in the patches/ directory in order to use it.

	* gnomelib-init.c: Initialize the gnome-vfs module.

Wed Aug 30 22:22:47 2000  George Lebl <jirka@5z.com>

	* Makefile.am: cosmetic cleanups done in search of errors

Thu Aug 24 03:11:54 2000  George Lebl <jirka@5z.com>
