@@ -1,3 +1,7 @@
+2000-09-28  Martin Baulig  <baulig@suse.de>
+
+	* gnome-history.[ch]: Moved to libcompat.
+
 Thu Sep 28 03:34:52 2000  George Lebl <jirka@5z.com>
 
 	* gnome-ditem.c, gnome-moz-remote2.c, gnome-util.c, gnomelib-init2.c:
